traces/bug_549.txt
src/femlib/GQuadTree.cpp:750: error: DEAD_STORE
  The value written to &dP (type double) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:750:8: Write of unused value
748.   	      j=ni[randwalk(nn)];
749.   	      it=nadj[j];
750.   	      dP=DBL_MAX;
              ^
751.   	      //cout << "new it= " << it << endl;
752.   	      continue;
